Created and registered plugin with bower

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "video-plugin",
+  "name": "video-player-plugin",
   "version": "1.0.0",
   "description": "A plugin to utilise the Youtube api. A way to standardise our code for commericial projects",
   "main": "src/video.js",
