--- a/package.json
+++ b/package.json
@@ -11,5 +11,9 @@
     "player"
   ],
   "author": "Matt Coleman",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-uglify": "^1.5.3"
+  }
 }
