--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "video-player-plugin",
   "version": "1.0.0",
   "description": "A plugin to utilise the Youtube api. A way to standardise our code for commericial projects",
-  "main": "src/video.js",
+  "main": "src/player.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -14,6 +14,7 @@
   "license": "MIT",
   "devDependencies": {
     "gulp": "^3.9.1",
+    "gulp-rename": "^1.2.2",
     "gulp-uglify": "^1.5.3"
   }
 }
