--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "video-player-plugin",
   "description": "A plugin to utilise the Youtube api",
-  "main": "src/video.js",
+  "main": "dist/player.min.js",
   "authors": [
     "Matt Coleman"
   ],
