Added gulp copy and copy task to be run with the compress task

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Matt Coleman",
   "license": "MIT",
   "devDependencies": {
+    "grunt-contrib-copy": "^1.0.0",
     "gulp": "^3.9.1",
     "gulp-jshint": "^2.0.1",
     "gulp-rename": "^1.2.2",
