--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
   "author": "Matt Coleman",
   "license": "MIT",
   "devDependencies": {
+    "browser-sync": "^2.13.0",
     "grunt-contrib-copy": "^1.0.0",
     "gulp": "^3.9.1",
+    "gulp-cssmin": "^0.1.7",
     "gulp-jshint": "^2.0.1",
+    "gulp-plumber": "^1.1.0",
     "gulp-rename": "^1.2.2",
+    "gulp-sass": "^2.3.1",
     "gulp-uglify": "^1.5.3",
     "jshint": "^2.9.2",
     "jshint-stylish": "^2.2.0"
