Syntax error fixed in bower file

--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,7 @@
   "description": "A plugin to utilise the Youtube api",
   "main": [
     "dist/player.js",
-    "dist/player.css",
+    "dist/player.css"
   ],
   "authors": [
     "Matt Coleman"
