--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "grunt-contrib-copy": "^1.0.0",
     "gulp": "^3.9.1",
     "gulp-cssmin": "^0.1.7",
+    "gulp-gh-pages": "^0.5.4",
     "gulp-jshint": "^2.0.1",
     "gulp-plumber": "^1.1.0",
     "gulp-rename": "^1.2.2",
