Changed bower injection to min file

--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,7 @@
   "name": "video-player-plugin",
   "description": "A plugin to utilise the Youtube api",
   "main": [
-    "dist/player.js",
+    "dist/player.min.js",
     "dist/player.css"
   ],
   "authors": [
